<resources>
    <string name="app_name">WebRTC Client</string>
    <string name="login_app_name">WebRTC Client</string>
    <string name="app_version">WebRTC Client v1.0</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add Client</string>
    <string name="about_me">Author: Cui Donghang</string>

    <string name="ws_server">ws://192.168.43.74:3000</string>
    <string name="host">192.168.43.74</string>
    <string name="port">8080</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome to WebRTC Application!"</string>
    <string name="invalid_username">The username has been used by others!</string>
    <string name="login_failed">"Login failed"</string>

    <string name="local_name">Local Client</string>
    <string name="remote_name">Remote Client</string>
    <string name="remote_username">Remote Client Username</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_accept">Accept</string>
    <string name="action_refuse">Refuse</string>
</resources>
